book/tests/snapshots/snapshot__run_display_reference_prql@queries__functions-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/functions-3.prql
---
func fahrenheit_to_celsius temp -> temp - 32 / 1.8



from cities
derive temp_c = (
  temp_f
  fahrenheit_to_celsius
)



