book/tests/snapshots/snapshot__run_display_reference_prql@queries__functions-4.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/functions-4.prql
---
func fahrenheit_to_celsius temp -> temp - 32 / 1.8



func interp higher x lower:0 -> x - lower / higher - lower



from kettles
derive boiling_proportion = (
  temp_c
  fahrenheit_to_celsius
  interp 100
)



