book/tests/snapshots/snapshot__run_display_reference_prql@queries__header-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/header-0.prql
---
prql target:sql.postgres



from employees
sort age
take 10



