book/tests/snapshots/snapshot__run_display_reference_prql@queries__header-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/header-1.prql
---
prql target:sql.mssql



from employees
sort age
take 10



