book/tests/snapshots/snapshot__run_display_reference_prql@queries__tables-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/tables-0.prql
---
table top_50 = (
  from employees
  sort salary
  take 50
  aggregate [total_salary = sum salary]
)



from top_50



