book/tests/snapshots/snapshot__run_display_reference_prql@queries__tables-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/tables-1.prql
---
let grouping = s"
  SELECT SUM(a)
  FROM tbl
  GROUP BY
    GROUPING SETS
    ((b, c, d), (d), (b, d))
"



from grouping



